--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
       <title>Document</title>
 </head>
 <body>
+      {% include 'snippets/navbar.html'  %}
       <div class="container">
             {% block content %}
 
