--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,5 +4,5 @@
 <form action="" method="POST" >
       {% csrf_token %}
       {{form}}
-      <input type="submit" value="submit" />
+      <input type="submit" value="Login" />
 </form>
