--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,5 +1,9 @@
 {% url 'search:search' as search_url %}
 {% url 'cart:cart-home' as cart_url %}
+{% url 'login' as login_url %}
+{% url 'register' as register_url %}
+{% url 'logout' as logout_url %}
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -13,7 +17,16 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Cart</a>
+            <a class="nav-link" href="{{cart_url}}">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{login_url}}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{register_url}}">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{logout_url}}">Logout</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
