--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
             {% endblock content %}
       </div>
       {% include 'base/js.html' %}
+      <script src="{% static 'async/async.js' %}"></script>
 </body>
 </html> 
 
