--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,2 +1,3 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/stripe_form.css' %}">
