--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -1,3 +1,7 @@
 {% load static %}
 <script src="{% static 'jquery/jquery.min.js' %}"></script>
 <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/csrf_permit.js' %}" charset="utf-8"></script>
+<script src="{% static 'async/async.js' %}"></script>
+<!--<script src="https://js.stripe.com /v3/"></script> -->
+<script src="{% static 'js/stripe_form.js' %}"></script>
