--- a/billing/templates/billing/payment-method.html
+++ b/billing/templates/billing/payment-method.html
@@ -1,136 +1,11 @@
-{% extends 'base.html' %}
-
+{% expands 'base.html' %}
 
 
 {% block content %}
 
-
-<script src="https://js.stripe.com/v3/"></script>
-<style media="screen">
-
-</style>
-<form action="/charge" data-next-url='{% if next_url  %}{{next_url}}{% else %}{% url "cart:checkout" %}{% endif  %}' method="post" id="payment-form" data-token='{{publish_key}}'>
-  <div class="form-row">
-    <label for="card-element">
-      Credit or debit card
-    </label>
-    <div id="card-element" class="form-control">
-      <!-- A Stripe Element will be inserted here. -->
-    </div>
-
-    <!-- Used to display form errors. -->
-    <div id="card-errors" role="alert"></div>
-  </div>
-
-  <button>Submit Payment</button>
-</form>
-
-
+      <div class="row">
+            <div class="col-md-8 mx-auto">
+                  {% include 'billing/snippets/embedded_card.html' %}
+            </div>
+      </div>
 {% endblock content %}
-
-
-{% block script %}
-
-<script>
-  console.log("hello")
-  var paymentForm=$('#payment-form')
-  if (paymentForm.length==1){
-      var pubKey=paymentForm.attr('data-token')
-      var nextUrl=paymentForm.attr('data-next-url')
-     // Create a Stripe client.
-     var stripe = Stripe(pubKey);
-
-     // Create an instance of Elements.
-     var elements = stripe.elements();
-
-     // Custom styling can be passed to options when creating an Element.
-     // (Note that this demo uses a wider set of styles than the guide below.)
-     var style = {
-       base: {
-         color: '#32325d',
-         fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-         fontSmoothing: 'antialiased',
-         fontSize: '16px',
-         '::placeholder': {
-           color: '#aab7c4'
-         }
-       },
-       invalid: {
-         color: '#fa755a',
-         iconColor: '#fa755a'
-       }
-     };
-
-     // Create an instance of the card Element.
-     var card = elements.create('card', {style: style});
-
-     // Add an instance of the card Element into the `card-element` <div>.
-     card.mount('#card-element');
-
-     // Handle real-time validation errors from the card Element.
-     card.addEventListener('change', function(event) {
-       var displayError = document.getElementById('card-errors');
-       if (event.error) {
-         displayError.textContent = event.error.message;
-       } else {
-         displayError.textContent = '';
-       }
-     });
-
-     // Handle form submission.
-     var form = document.getElementById('payment-form');
-     form.addEventListener('submit', function(event) {
-       event.preventDefault();
-
-       stripe.createToken(card).then(function(result) {
-         if (result.error) {
-           // Inform the user if there was an error.
-           var errorElement = document.getElementById('card-errors');
-           errorElement.textContent = result.error.message;
-         } else {
-           // Send the token to your server.
-           stripeTokenHandler(result.token,nextUrl);
-         }
-       });
-     });
-
-     // Submit the form with the token ID.
-     function stripeTokenHandler(token,nextUrl) {
-       // Insert the token ID into the form so it gets submitted to the server
-       var form = document.getElementById('payment-form');
-       var hiddenInput = document.createElement('input');
-       hiddenInput.setAttribute('type', 'hidden');
-       hiddenInput.setAttribute('name', 'stripeToken');
-       hiddenInput.setAttribute('value', token.id);
-       form.appendChild(hiddenInput);
-       console.log(token.id)
-
-
-       var paymentMethodEndPoint='/billing/payment-method/create/'
-       var data={
-         'token':token.id
-       }
-       $.ajax({
-         data:data,
-         url:paymentMethodEndPoint,
-         method:"POST",
-         success:function(data){
-           if (nextUrl){
-             window.location.href=nextUrl
-           }else{
-             
-           }
-         },
-         error:function(error){
-           console.log(error)
-         }
-       })
-       //from.submit()
-   }
-  }
-
-
-
-
-</script>
-{% endblock script %}
