--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,9 +1,10 @@
 {% url 'search:search' as search_url %}
 {% url 'cart:cart-home' as cart_url %}
-{% url 'login' as login_url %}
-{% url 'register' as register_url %}
-{% url 'logout' as logout_url %}
-
+{% url 'accounts:login' as login_url %}
+{% url 'accounts:register' as register_url %}
+{% url 'accounts:logout' as logout_url %}
+{% url 'products:list' as products_url %}
+{% url 'accounts:home' as account_home_url %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -14,7 +15,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{products_url}}">products <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{cart_url}}">Cart</a>
@@ -27,6 +28,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{logout_url}}">Logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{account_home_url}}">Account</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
