local coded but not all complete

--- a/accounts/templates/accounts/home.html
+++ b/accounts/templates/accounts/home.html
@@ -42,6 +42,7 @@
                                     <div class="list-group">
                                           <a class='list-group-item' href="">Edit User Details (name,email,password)</a>
                                           <a class='list-group-item' href="{% url 'billing-payment-method' %}">Email Marketing</a>
+                                          <a class='list-group-item' href="{% url 'library' %}">library</a>
                                     </div>
                               </div>
                         </div>
@@ -52,7 +53,7 @@
                               <div class="card-title">History</div>
                               <div class="card-text">
                                     <div class="list-group">
-                                          <a class='list-group-item' href="{% url 'billing-payment-method' %}">Object Views list</a>
+                                          <a class='list-group-item' href="{% url 'billing-payment-method' %}">Object Views list </a>
                                     </div>
                               </div>
                         </div>
