--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -27,7 +27,7 @@ cart_id:{{object.cart.id}}
 
 
 {% else %}
-      {% if not object.shipping_address %}
+      {% if not object.shipping_address and shipping_address_required %}
       <div class="row">
             <div class="col-12 col-md-6 mx-auto">
                   <h2 class="lead">Shipping Address</h2>
