--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -6,7 +6,7 @@
 <div class="row">
 {% for obj in object_list %}
 
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-4 my-3">
             {% include 'products/snippets/card.html' with instance=obj %}
       </div>
 
