--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -5,7 +5,7 @@
 {% url 'accounts:logout' as logout_url %}
 {% url 'products:list' as products_url %}
 {% url 'accounts:home' as account_home_url %}
-
+{% url 'library' as library %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,6 +16,9 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="{{products_url}}">products <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{{library}}">library <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{cart_url}}">Cart</a>
